Alterção do valor da option

--- a/HelpDesk/index.html
+++ b/HelpDesk/index.html
@@ -51,9 +51,10 @@
             <br>
             <form class="form" role="form" id="formulario">
                 <div class="form-group col-sm-2">
-                    <label>Colaborador</label> <br>
-                    <select class="form-control">
-                        <option>Adriano</option>
+                    <label for="colaborador">Colaborador</label> <br>
+                    <select class="form-control" id="colaborador">
+											  <option></option>
+                        <option value="Adriano">Adriano</option>
                         <option>Iana</option>
                         <option>Julia</option>
                         <option>Pedro</option>
