Valicação testada pelo Vinicius

--- a/HelpDesk/index.html
+++ b/HelpDesk/index.html
@@ -151,11 +151,11 @@
                     </div>
                     <div class="form-group col-sm-3">
                         <label>ID FreshDesk</label> <br>
-                        <input name="idFreshdesk" ng-model="idFreshdesk" class="form-control" type="text" ng-minlength="4" ng-maxlength="7">
+                        <input type="number" name="idFreshdesk" ng-model="idFreshdesk" class="form-control" type="text" ng-minlength="4" ng-maxlength="7">
                     </div>
                     <div class="form-group col-sm-3">
                         <label>ID Aluno</label> <br>
-                        <input name="idAluno" ng-model="idAluno" class="form-control" type="text" ng-required="true" ng-minlength="4" ng-maxlength="7">
+                        <input type="number" name="idAluno" ng-model="idAluno" class="form-control" type="text" ng-required="true" ng-minlength="4" ng-maxlength="7">
                     </div>
                     <div class="form-group col-sm-3">
                         <label>Data</label> <br>
@@ -173,7 +173,7 @@
                     </div>
                     <div class="form-group col-sm-4">
                         <label for="observacao">Observações</label> <br>
-                        <textarea name="observacao" ng-model="observacao" class="form-control" rows="2" id="observacao" placeholder="Informações úteis sobre o atendimento" ng-required="true"></textarea>
+                        <textarea name="observacao" ng-model="observacao" class="form-control" rows="2" id="observacao" placeholder="Informações úteis sobre o atendimento"></textarea>
                     </div>
                 </div>
             <br>
