--- a/HelpDesk/index.html
+++ b/HelpDesk/index.html
@@ -1,62 +1,62 @@
 <!DOCTYPE html>
 <html lang="pt=br">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<script src="http://code.angularjs.org/1.2.6/angular.js"></script>
-		<script src="js/main.js"></script>
-		<script src="js/controllers/form-controller.js"></script>
-	<link rel="stylesheet" href="js/script.js">
-	<link rel="stylesheet" href="css/style.css">
-	<title>HelpDesk</title>
+    <script src="http://code.angularjs.org/1.2.6/angular.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/controllers/form-controller.js"></script>
+    <link rel="stylesheet" href="js/script.js">
+    <link rel="stylesheet" href="css/style.css">
+    <title>HelpDesk</title>
 </head>
-<body ng-app="helpdesk" ng-controller="formController">
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">HelpDesk</a>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Início</a></li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Menu <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Relatórios</a></li>
-                            <li><a href="#">Registros</a></li>
-                            <li><a href="#">Editor</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">Banco de Dados</a></li>
-                    <li><a href="#">Estatisticas</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Sair</a></li>
-                </ul>
-            </div>
+<body ng-app="helpdesk" ng-controller="formController as vm">
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">HelpDesk</a>
         </div>
-    </nav>
-	<div class="container">
-		<div class="jumbotron">
-			<div class="row">
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Início</a></li>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Menu <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Relatórios</a></li>
+                        <li><a href="#">Registros</a></li>
+                        <li><a href="#">Editor</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Banco de Dados</a></li>
+                <li><a href="#">Estatisticas</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Sair</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div class="container">
+    <div class="jumbotron">
+        <div class="row">
             <h2>
                 Cadastro de Atendimento
                 <small class="text-muted">HelpDesk</small>
             </h2>
             <br>
-            <form novalidate  name="formulario" class="form" role="form" id="formulario" ng-submit="submitForm()">
+            <form novalidate name="formulario" class="form" role="form" id="formulario" ng-submit="vm.submitForm()">
                 <div class="form-group col-sm-2">
                     <label for="colaborador">Colaborador</label> <br>
                     <select class="form-control" id="colaborador">
-											  <option></option>
+                        <option></option>
                         <option value="Adriano">Adriano</option>
                         <option>Iana</option>
                         <option>Julia</option>
@@ -125,60 +125,63 @@
                         <option>Parcial</option>
                     </select>
                 </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="form-group col-sm-3">
+                <label>Problema</label> <br>
+                <select class="form-control">
+                    <option>XXXXXX</option>
+                    <option>XXXXXX</option>
+                    <option>XXXXXX</option>
+                    <option>XXXXXX</option>
+                    <option>XXXXXX</option>
+                    <option>XXXXXX</option>
+                    <option>XXXXXX</option>
+                    <option>XXXXXX</option>
+                    <option>XXXXXX</option>
+                </select>
             </div>
-            <br>
-                <div class="row">
-                    <div class="form-group col-sm-3">
-                        <label>Problema</label> <br>
-                        <select class="form-control">
-                            <option>XXXXXX</option>
-                            <option>XXXXXX</option>
-                            <option>XXXXXX</option>
-                            <option>XXXXXX</option>
-                            <option>XXXXXX</option>
-                            <option>XXXXXX</option>
-                            <option>XXXXXX</option>
-                            <option>XXXXXX</option>
-                            <option>XXXXXX</option>
-                        </select>
-                    </div>
-                    <div class="form-group col-sm-3">
-                        <label>ID FreshDesk</label> <br>
-                        <input class="form-control" type="text">
-                    </div>
-                    <div class="form-group col-sm-3">
-                        <label>ID Aluno</label> <br>
-                        <input name="idAluno" ng-model="idAluno" class="form-control" type="text" ng-required="true">
-												<span ng-show="formulario.idAluno.$invalid" class="form-control alert-danger">
+            <div class="form-group col-sm-3">
+                <label>ID FreshDesk</label> <br>
+                <input class="form-control" type="text">
+            </div>
+            <div class="form-group col-sm-3">
+                <label>ID Aluno</label> <br>
+                <input name="idAluno" ng-model="idAluno" class="form-control" type="text" ng-required="true">
+                <span ng-show="formulario.idAluno.$invalid" class="form-control alert-danger">
 													Campo obrigatório!
 												</span>
-                    </div>
-                    <div class="form-group col-sm-3">
-                        <label>Data</label> <br>
-                        <input class="form-control" type="date">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="form-group col-sm-4">
-                        <label for="diagnostico">Diagnóstico</label> <br>
-                        <textarea class="form-control" rows="2" id="diagnostico" placeholder="Problema que o aluno relatou e você identificou"></textarea>
-                    </div>
-                    <div class="form-group col-sm-4">
-                        <label for="resposta">Resposta</label> <br>
-                        <textarea class="form-control" rows="2" id="resposta" placeholder="Sua solução ou resposta para o aluno"></textarea>
-                    </div>
-                    <div class="form-group col-sm-4">
-                        <label for="observacao">Observações</label> <br>
-                        <textarea class="form-control" rows="2" id="observacao" placeholder="Informações úteis sobre o atendimento"></textarea>
-                    </div>
-                </div>
-            <br>
-            <div class="btns">
-                <button type="submit" class="btn btn-success" ng-disabled="formulario.$invalid">Enviar</button>
-                <button type="reset" class="btn btn-primary">Limpar</button>
             </div>
-            </form>
-		</div>
-	</div>
+            <div class="form-group col-sm-3">
+                <label>Data</label> <br>
+                <input class="form-control" type="date">
+            </div>
+        </div>
+        <div class="row">
+            <div class="form-group col-sm-4">
+                <label for="diagnostico">Diagnóstico</label> <br>
+                <textarea class="form-control" rows="2" id="diagnostico"
+                          placeholder="Problema que o aluno relatou e você identificou"></textarea>
+            </div>
+            <div class="form-group col-sm-4">
+                <label for="resposta">Resposta</label> <br>
+                <textarea class="form-control" rows="2" id="resposta"
+                          placeholder="Sua solução ou resposta para o aluno"></textarea>
+            </div>
+            <div class="form-group col-sm-4">
+                <label for="observacao">Observações</label> <br>
+                <textarea class="form-control" rows="2" id="observacao"
+                          placeholder="Informações úteis sobre o atendimento"></textarea>
+            </div>
+        </div>
+        <br>
+        <div class="btns">
+            <button type="submit" class="btn btn-success" ng-disabled="formulario.$invalid">Enviar</button>
+            <button type="reset" class="btn btn-primary">Limpar</button>
+        </div>
+        </form>
+    </div>
+</div>
 </body>
 </html>
