--- a/HelpDesk/public/index.html
+++ b/HelpDesk/public/index.html
@@ -10,10 +10,11 @@
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> <!-- bootstrap script JS -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script> <!-- angular script -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-messages/1.5.8/angular-messages.min.js"></script> <!-- Script do Angular Messages -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-resource/1.5.8/angular-resource.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/js/animsition.min.js"></script> <!-- Transição entre telas -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/css/animsition.min.css"> <!-- Transição entre telas -->
 	<script src="/js/app.js"></script>
-	<script src="/js/script.js"></script>
+	<script src="/js/animsition.js"></script>
 	<script src="/js/controllers/cadastro-controller.js"></script>
 	<link rel="stylesheet" href="/css/style.css">
 	<title>HelpDesk</title>
