Correções na função Enviar e Limpar

--- a/HelpDesk/public/index.html
+++ b/HelpDesk/public/index.html
@@ -60,7 +60,7 @@
 				<small class="text-muted">HelpDesk</small>
 			</h2>
 			<br>
-			<form class="form" name="formCadastro" id="formulario" novalidate ng-submit="vm.submitForm(vm.cadastro)"> <!-- Inicio do Fomulário -->
+			<form class="form" name="formCadastro" id="formulario" novalidate ng-submit="vm.submitForm(vm.cadastro,formCadastro)"> <!-- Inicio do Fomulário -->
 				<div class="row">
 					<div class="form-group col-sm-2">
 						<label for="colaborador">Colaborador</label>
