--- a/HelpDesk/public/index.html
+++ b/HelpDesk/public/index.html
@@ -23,8 +23,8 @@
 	<title>HelpDesk</title>
 </head>
 
-<body class="animsition" data-animsition-in-class="zoom-in-sm" data-animsition-in-duration="1000" data-animsition-out-class="zoom-out-sm" data-animsition-out-duration="800">
-	
+<body class="animsition">
+
 	<ng-view></ng-view>
 
 </body>
