--- a/HelpDesk/public/index.html
+++ b/HelpDesk/public/index.html
@@ -17,7 +17,9 @@
 	<script src="/js/app.js"></script>
 	<script src="/js/animsition.js"></script>
 	<script src="/js/controllers/cadastro-controller.js"></script>
+	<script src="/js/controllers/login-controller.js"></script>
 	<script src="/js/services/cadastroService.js"></script>
+	<script src="/js/services/consultaService.js"></script>
 	<script src="/js/directives/navbar/navbar.js"></script>
 	<link rel="stylesheet" href="/css/style.css">
 	<title>HelpDesk</title>
