Ajustes de padrão na controller da página de CONSULTA

--- a/HelpDesk/public/index.html
+++ b/HelpDesk/public/index.html
@@ -17,6 +17,7 @@
 	<script src="/js/app.js"></script>
 	<script src="/js/animsition.js"></script>
 	<script src="/js/controllers/cadastro-controller.js"></script>
+	<script src="/js/controllers/consulta-controller.js"></script>
 	<script src="/js/controllers/login-controller.js"></script>
 	<script src="/js/services/cadastroService.js"></script>
 	<script src="/js/services/consultaService.js"></script>
