--- a/HelpDesk/public/index.html
+++ b/HelpDesk/public/index.html
@@ -18,6 +18,7 @@
 	<script src="/js/animsition.js"></script>
 	<script src="/js/controllers/cadastro-controller.js"></script>
 	<script src="/js/controllers/consulta-controller.js"></script>
+	<script src="/js/controllers/entrada-controller.js"></script>
 	<script src="/js/controllers/login-controller.js"></script>
 	<script src="/js/services/cadastroService.js"></script>
 	<script src="/js/services/consultaService.js"></script>
