--- a/HelpDesk/public/index.html
+++ b/HelpDesk/public/index.html
@@ -24,6 +24,7 @@
 	<script src="/js/services/consultaService.js"></script>
 	<script src="/js/services/token-interceptor.js"></script>
 	<script src="/js/directives/menu-superior/menu-superior.js"></script>
+	<script src="/js/filters/unique.js"></script>
 	<link rel="stylesheet" href="/css/style.css">
 	<title>HelpDesk</title>
 </head>
