Implementado sistema de logout

--- a/HelpDesk/public/index.html
+++ b/HelpDesk/public/index.html
@@ -20,6 +20,7 @@
 	<script src="/js/controllers/consulta-controller.js"></script>
 	<script src="/js/controllers/entrada-controller.js"></script>
 	<script src="/js/controllers/login-controller.js"></script>
+	<script src="/js/controllers/logout-controller.js"></script>
 	<script src="/js/services/cadastroService.js"></script>
 	<script src="/js/services/consultaService.js"></script>
 	<script src="/js/services/token-interceptor.js"></script>
