--- a/HelpDesk/public/js/directives/menu-superior/menu-superior.html
+++ b/HelpDesk/public/js/directives/menu-superior/menu-superior.html
@@ -23,7 +23,7 @@
         <li><a href="#"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span>&nbsp;&nbsp;Estatisticas</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Sair</a></li>
+        <li><a href="#/logout"><span class="glyphicon glyphicon-log-out"></span> Sair</a></li>
       </ul>
     </div>
   </div>
