Filtro de DATAS por período (início/fim) implementado CONSULTA.HTML

--- a/HelpDesk/public/index.html
+++ b/HelpDesk/public/index.html
@@ -26,6 +26,7 @@
 	<script src="/js/services/token-interceptor.js"></script>
 	<script src="/js/directives/menu-superior/menu-superior.js"></script>
 	<script src="/js/filters/unique.js"></script>
+	<script src="/js/filters/dateFilter.js"></script>
 	<link rel="stylesheet" href="/css/style.css">
 	<title>HelpDesk</title>
 </head>
