Adicionando paginação (100 itens por página) CONSULTA.HTML

--- a/HelpDesk/public/index.html
+++ b/HelpDesk/public/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/css/animsition.min.css"> <!-- Transição entre telas -->
 	<script src="/js/app.js"></script>
 	<script src="/js/animsition.js"></script>
+	<script src="/js/dirPagination.js"></script>
 	<script src="/js/controllers/cadastro-controller.js"></script>
 	<script src="/js/controllers/consulta-controller.js"></script>
 	<script src="/js/controllers/entrada-controller.js"></script>
