--- a/HelpDesk/public/index.html
+++ b/HelpDesk/public/index.html
@@ -3,32 +3,11 @@
 
 <head>
 	<meta charset="UTF-8">
-	<link rel="icon" href="img/favicon1.png" /> <!-- favicon -->
+	<link rel="icon" href="img/favicon1.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> <!-- jquery script -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> <!-- bootstrap script CSS -->
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> <!-- bootstrap script JS -->
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script> <!-- angular script -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-messages/1.5.8/angular-messages.min.js"></script> <!-- Script do Angular Messages -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-resource/1.5.8/angular-resource.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/js/animsition.min.js"></script> <!-- Transição entre telas -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/css/animsition.min.css"> <!-- Transição entre telas -->
-	<script src="/js/app.js"></script>
-	<script src="/js/animsition.js"></script>
-	<script src="/js/dirPagination.js"></script>
-	<script src="/js/controllers/cadastro-controller.js"></script>
-	<script src="/js/controllers/consulta-controller.js"></script>
-	<script src="/js/controllers/entrada-controller.js"></script>
-	<script src="/js/controllers/login-controller.js"></script>
-	<script src="/js/controllers/logout-controller.js"></script>
-	<script src="/js/services/cadastroService.js"></script>
-	<script src="/js/services/consultaService.js"></script>
-	<script src="/js/services/token-interceptor.js"></script>
-	<script src="/js/directives/menu-superior/menu-superior.js"></script>
-	<script src="/js/filters/unique.js"></script>
-	<script src="/js/filters/dateFilter.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/css/animsition.min.css">
 	<title>HelpDesk</title>
 </head>
 
@@ -38,4 +17,25 @@
 
 </body>
 
+	<script src="/js/lib/jquery/1.12.4/jquery.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="/js/lib/angularjs/1.5.8/angular.min.js"></script>
+	<script src="/js/lib/angular-messages/1.5.8/angular-messages.min.js"></script>
+	<script src="/js/lib/angular-resource/1.5.8/angular-resource.min.js"></script>
+	<script src="/js/lib/angularjs/1.5.8/angular-route.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/js/animsition.min.js"></script>
+	<script src="/js/app.js"></script>
+	<script src="/js/animsition.js"></script>
+	<script src="/js/dirPagination.js"></script>
+	<script src="/js/controllers/cadastro-controller.js"></script>
+	<script src="/js/controllers/consulta-controller.js"></script>
+	<script src="/js/controllers/entrada-controller.js"></script>
+	<script src="/js/controllers/login-controller.js"></script>
+	<script src="/js/controllers/logout-controller.js"></script>
+	<script src="/js/services/cadastro-service.js"></script>
+	<script src="/js/services/consulta-service.js"></script>
+	<script src="/js/services/token-interceptor.js"></script>
+	<script src="/js/directives/menu-superior/menu-superior.js"></script>
+	<script src="/js/filters/unique.js"></script>
+	<script src="/js/filters/dateFilter.js"></script>
 </html>
