--- a/HelpDesk/public/index.html
+++ b/HelpDesk/public/index.html
@@ -6,8 +6,9 @@
 	<link rel="icon" href="img/favicon1.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/css/animsition.min.css">
+	<link rel="stylesheet" href="/css/style.css">
 	<title>HelpDesk</title>
 </head>
 
@@ -24,6 +25,11 @@
 	<script src="/js/lib/angular-resource/1.5.8/angular-resource.min.js"></script>
 	<script src="/js/lib/angularjs/1.5.8/angular-route.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/js/animsition.min.js"></script>
+	<!-- angular material -->
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
+	<!-- END angular material -->
 	<script src="/js/app.js"></script>
 	<script src="/js/animsition.js"></script>
 	<script src="/js/dirPagination.js"></script>
