Registrando data automaticamente no CADASTRO.HTML

--- a/HelpDesk/public/js/directives/menu-superior/menu-superior.html
+++ b/HelpDesk/public/js/directives/menu-superior/menu-superior.html
@@ -14,9 +14,9 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown">Menu <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#/consulta"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>&nbsp;&nbsp;Relatórios</a></li>
+            <li><a href="#/consulta"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>&nbsp;&nbsp;Consultas</a></li>
           </ul>
-        </li>        
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#/logout"><span class="glyphicon glyphicon-log-out"></span> Sair</a></li>
